# policygraph-mcp

./: .gitignore  CITATION.cff  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
config/: allowlist.json
docs/: SECURITY.md  agent-contract.md  architecture.md  contributing.md  invariants.md  quickstart.md  safety-threat-model.md  tool-contracts.md
eval/: cases_end_to_end.jsonl
services/host/: Dockerfile  requirements.txt
services/host/src/: multi_mcp_host.py
services/mcp-policy-kb/: Dockerfile
services/mcp-policy-kb/src/: server.py
services/mcp-servicenow/: Dockerfile
services/mcp-servicenow/src/: server.py
services/mcp-sharepoint/src/: server.py
src/eval/: end_to_end_eval.py  naive_agent.py  offline_gate_eval.py
src/graph/: langgraph_agent.py
src/host/: allowlist_config.py  llm_client.py  multi_mcp_host.py  planner.py  safety.py  summarizer.py  tool_schemas.py  trace.py  typed_models.py  typed_parser.py  validator.py
tests/: conftest.py  test_smoke_imports.py
